force-app/main/default/objects/Lead/fields/Country_alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Country_alpha2Code__c</fullName>
    <label>Country alpha2Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>