force-app/main/default/objects/Lead/fields/Country_Capital_City__c.field-meta.xml
<CustomField>
    <fullName>Country_Capital_City__c</fullName>
    <label>Country Capital City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>