force-app/main/default/objects/Lead/fields/Country_RegionalBlocs_Acronym__c.field-meta.xml
<CustomField>
    <fullName>Country_RegionalBlocs_Acronym__c</fullName>
    <label>Country RegionalBlocs Acronym</label>
    <length>50</length>
    <type>Text</type>
</CustomField>